--- a/Seaction.html
+++ b/Seaction.html
@@ -144,7 +144,7 @@
                         </div>
                     </li>
                     <li class="position-relative">
-                        <a class="hvr" href="">Series</a> <i class="fa-light fa-chevron-down fa-xs"></i>
+                        <a class="hvr" href="#">Series</a> <i class="fa-light fa-chevron-down fa-xs"></i>
                         <div class="dropdownList">
                             <a href="./Seaction.html">English Series</a>
                             <a href="./Seaction.html">Arabic Series</a>
@@ -155,7 +155,7 @@
                         </div>
                     </li>
                     <li class="position-relative">
-                        <a class="hvr" href="">More</a> <i class="fa-light fa-chevron-down fa-xs"></i>
+                        <a class="hvr" href="#">More</a> <i class="fa-light fa-chevron-down fa-xs"></i>
                         <div class="dropdownList">
                             <a href="#">Admin</a>
                             <a href="#">Profile</a>
@@ -167,7 +167,7 @@
                     </li>
                 </ul>
             </div>
-           <!-- icons -->
+        <!-- icons -->
             <div class="iconsnav">
                 <button id="open" class="icon">
                     <i class="fa-light fa-magnifying-glass fa-lg"></i>
@@ -177,9 +177,7 @@
                     <i  class="fa-solid fa-lightbulb-on fa-lg themeicon btnLight text-warning"></i>
                     <i  class="fa-light fa-moon fa-lg themeicon d-none"></i>
                 </button>
-                <ul class="icon d-none d-md-flex">
-                    <a href="">Sign in</a>
-                </ul>
+                <a class="icon d-none d-md-flex" href="#">Sign in</a>
                 <button id="openSlider" class="d-lg-none">
                     <i class="fa-light fa-bars-staggered fa-lg"></i>
                 </button>
@@ -348,7 +346,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-2 boxImgs d-none-1190 d-inline-block-590">
+                <div class="col-2 boxImgs d-none-1190">
                     <section class="itemsCard">
                         <div class="overlaycards"></div>
                         <div class="Img">
@@ -456,7 +454,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-2 boxImgs">
+                <div class="col-2 boxImgs d-none-990 d-flex-740">
                     <section class="itemsCard">
                         <div class="overlaycards"></div>
                         <div class="Img">
@@ -534,7 +532,7 @@
         </div>
     </main>
 
-     <main class="content my-5">
+     <main class="content my-5 bg-danger">
         <div class="container-custom">            
             <div class="productRow">
                 <div class="col-2 boxImgs d-none-1460">
@@ -573,7 +571,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-2 boxImgs d-none-1190 d-inline-block-590">
+                <div class="col-2 boxImgs d-none-1190">
                     <section class="itemsCard">
                         <div class="overlaycards"></div>
                         <div class="Img">
@@ -681,7 +679,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-2 boxImgs">
+                <div class="col-2 boxImgs d-none-990 d-flex-740">
                     <section class="itemsCard">
                         <div class="overlaycards"></div>
                         <div class="Img">
@@ -759,7 +757,7 @@
         </div>
     </main>
 
-     <main class="content my-5">
+    <main class="content my-5">
         <div class="container-custom">            
             <div class="productRow">
                 <div class="col-2 boxImgs d-none-1460">
@@ -798,7 +796,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-2 boxImgs d-none-1190 d-inline-block-590">
+                <div class="col-2 boxImgs d-none-1190">
                     <section class="itemsCard">
                         <div class="overlaycards"></div>
                         <div class="Img">
@@ -906,7 +904,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-2 boxImgs">
+                <div class="col-2 boxImgs d-none-990 d-flex-740">
                     <section class="itemsCard">
                         <div class="overlaycards"></div>
                         <div class="Img">
@@ -1023,7 +1021,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-2 boxImgs d-none-1190 d-inline-block-590">
+                <div class="col-2 boxImgs d-none-1190">
                     <section class="itemsCard">
                         <div class="overlaycards"></div>
                         <div class="Img">
@@ -1131,7 +1129,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-2 boxImgs">
+                <div class="col-2 boxImgs d-none-990 d-flex-740">
                     <section class="itemsCard">
                         <div class="overlaycards"></div>
                         <div class="Img">
@@ -1248,7 +1246,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-2 boxImgs d-none-1190 d-inline-block-590">
+                <div class="col-2 boxImgs d-none-1190">
                     <section class="itemsCard">
                         <div class="overlaycards"></div>
                         <div class="Img">
@@ -1356,7 +1354,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-2 boxImgs">
+                <div class="col-2 boxImgs d-none-990 d-flex-740">
                     <section class="itemsCard">
                         <div class="overlaycards"></div>
                         <div class="Img">
@@ -1473,7 +1471,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-2 boxImgs d-none-1190 d-inline-block-590">
+                <div class="col-2 boxImgs d-none-1190">
                     <section class="itemsCard">
                         <div class="overlaycards"></div>
                         <div class="Img">
@@ -1581,7 +1579,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-2 boxImgs">
+                <div class="col-2 boxImgs d-none-990 d-flex-740">
                     <section class="itemsCard">
                         <div class="overlaycards"></div>
                         <div class="Img">
@@ -1698,7 +1696,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-2 boxImgs d-none-1190 d-inline-block-590">
+                <div class="col-2 boxImgs d-none-1190">
                     <section class="itemsCard">
                         <div class="overlaycards"></div>
                         <div class="Img">
@@ -1806,7 +1804,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-2 boxImgs">
+                <div class="col-2 boxImgs d-none-990 d-flex-740">
                     <section class="itemsCard">
                         <div class="overlaycards"></div>
                         <div class="Img">
@@ -1923,7 +1921,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-2 boxImgs d-none-1190 d-inline-block-590">
+                <div class="col-2 boxImgs d-none-1190">
                     <section class="itemsCard">
                         <div class="overlaycards"></div>
                         <div class="Img">
@@ -2031,7 +2029,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-2 boxImgs">
+                <div class="col-2 boxImgs d-none-990 d-flex-740">
                     <section class="itemsCard">
                         <div class="overlaycards"></div>
                         <div class="Img">
@@ -2148,7 +2146,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-2 boxImgs d-none-1190 d-inline-block-590">
+                <div class="col-2 boxImgs d-none-1190">
                     <section class="itemsCard">
                         <div class="overlaycards"></div>
                         <div class="Img">
@@ -2256,7 +2254,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-2 boxImgs">
+                <div class="col-2 boxImgs d-none-990 d-flex-740">
                     <section class="itemsCard">
                         <div class="overlaycards"></div>
                         <div class="Img">
@@ -2397,6 +2395,7 @@
     <!--nice scroll-->
     
     <!-- Js Index Java Script -->
+    <script src="asstes/js/shared.js"></script>
     <script src="asstes/js/index-section.js"></script>
   
 </body>
