--- a/show-Room.html
+++ b/show-Room.html
@@ -146,7 +146,7 @@
                         </div>
                     </li>
                     <li class="position-relative">
-                        <a class="hvr" href="">Series</a> <i class="fa-light fa-chevron-down fa-xs"></i>
+                        <a class="hvr" href="#">Series</a> <i class="fa-light fa-chevron-down fa-xs"></i>
                         <div class="dropdownList">
                             <a href="./Seaction.html">English Series</a>
                             <a href="./Seaction.html">Arabic Series</a>
@@ -157,7 +157,7 @@
                         </div>
                     </li>
                     <li class="position-relative">
-                        <a class="hvr" href="">More</a> <i class="fa-light fa-chevron-down fa-xs"></i>
+                        <a class="hvr" href="#">More</a> <i class="fa-light fa-chevron-down fa-xs"></i>
                         <div class="dropdownList">
                             <a href="#">Admin</a>
                             <a href="#">Profile</a>
@@ -313,7 +313,7 @@
                     <section class="itemsCard">
                         <div class="overlaycards"></div>
                         <div class="Img">
-                            <img src="./asstes/img/1.jpg" alt="">
+                            <img src="./asstes/img/17.jpg" alt="">
                         </div>
                         <h6 class="titlefilm">Alice Through the Looking </h6>
                     </section>
@@ -561,7 +561,7 @@
                     <section class="itemsCard">
                         <div class="overlaycards"></div>
                         <div class="Img">
-                            <img src="./asstes/img/16.webp" alt="">
+                            <img src="./asstes/img/16.jpg" alt="">
                         </div>
                         <h6 class="titlefilm">Alice Through the Looking </h6>
                     </section>
@@ -592,7 +592,7 @@
                     <section class="itemsCard">
                         <div class="overlaycards"></div>
                         <div class="Img">
-                            <img src="./asstes/img/17.jpg" alt="">
+                            <img src="./asstes/img/8.jpg" alt="">
                         </div>
                         <h6 class="titlefilm">Alice Through the Looking </h6>
                     </section>
@@ -740,6 +740,7 @@
     <script src="https://vjs.zencdn.net/8.3.0/video.min.js"></script>
     
     <!-- Js Index Java Script -->
+    <script src="asstes/js/shared.js"></script>
     <script src="asstes/js/index-room.js"></script>
   
 </body>
