--- a/admin/edit-user.html
+++ b/admin/edit-user.html
@@ -159,7 +159,7 @@
 							<!-- or red -->
 							<div class="profile__meta profile__meta--green">
 								<h3>John Doe <span>(Approved)</span></h3>
-								<span>HotFlix ID: 23562</span>
+								<span>Blur.TV ID: 23562</span>
 							</div>
 						</div>
 						<!-- end profile user -->
