--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                     <i  class="fa-solid fa-lightbulb-on fa-lg themeicon btnLight text-warning"></i>
                     <i  class="fa-light fa-moon fa-lg themeicon d-none"></i>
                 </button>
-                <a class="icon d-none d-md-flex" href="#">Sign in</a>
+                <a class="icon d-none d-md-flex" href="login.html">Sign in</a>
                 <button id="openSlider" class="d-lg-none">
                     <i class="fa-light fa-bars-staggered fa-lg"></i>
                 </button>
@@ -2599,6 +2599,74 @@
         </div>        
     </main>
     <!-- End  -->
+
+    <!-- pricing -->
+    <section class="pricing">
+        <!-- Card 20$ -->
+        <a href="#" class="card-wrapper">
+            <!-- card Header -->
+            <div class="card-header">
+                <h2>Free</h2>
+            </div>
+            <!-- card price -->
+            <div class="card-price">
+                <h2>$0</h2>
+                <span>Per month</span>
+            </div>
+            <!-- card detail -->
+            <div class="card-detail">
+                <p><span class="fas fa-check check"></span> <b>1</b> Full user</p>
+                <p><span class="fas fa-check check"></span> <b>5</b> conract per clients</p>
+                <p><span class="fas fa-times nocheck"></span> lorem ipsum dolor</p>
+                <p><span class="fas fa-times nocheck"></span> lorem ipsum dolor</p>
+            </div>
+            <!-- button -->
+            <button class="card-button">i want it</button>
+        </a>
+        <!-- Card 40$ -->
+        <a href="#" class="card-wrapper">
+            <!-- card Header -->
+            <div class="card-header">
+                <h2>Startup</h2>
+            </div>
+            <!-- card price -->
+            <div class="card-price">
+                <h2>$20</h2>
+                <span>Per month</span>
+            </div>
+            <!-- card detail -->
+            <div class="card-detail">
+                <p><span class="fas fa-check check"></span> <b>1</b> Full user</p>
+                <p><span class="fas fa-check check"></span> <b>5</b> conract per clients</p>
+                <p><span class="fas fa-check check"></span> lorem ipsum dolor</p>
+                <p><span class="fas fa-times nocheck"></span> lorem ipsum dolor</p>
+            </div>
+            <!-- button -->
+            <button class="card-button">i want it</button>
+        </a>
+        <!-- Card 60$ -->
+        <a href="#" class="card-wrapper">
+            <!-- card Header -->
+            <div class="card-header">
+                <h2>Growth</h2>
+            </div>
+            <!-- card price -->
+            <div class="card-price">
+                <h2>$40</h2>
+                <span>Per month</span>
+            </div>
+            <!-- card detail -->
+            <div class="card-detail">
+                <p><span class="fas fa-check check"></span> <b>1</b> Full user</p>
+                <p><span class="fas fa-check check"></span> <b>5</b> conract per clients</p>
+                <p><span class="fas fa-check check"></span> lorem ipsum dolor</p>
+                <p><span class="fas fa-check check"></span> lorem ipsum dolor</p>
+            </div>
+            <!-- button -->
+            <button class="card-button">i want it</button>
+        </a>
+    </section>
+    <!-- end -->
 
     <!-- footer -->
 	<footer class="footer">
