--- a/Item-Details.html
+++ b/Item-Details.html
@@ -32,7 +32,21 @@
         </div>
     </div>
     <!-- End -->
-
+    <!-- bubble Trailer -->
+    <section id="bubbleTrailer">
+        <div class="sectionTrailer">
+            <div class="stop mb-3">
+                <button class="close-trailer stop "><i class='fa-regular fa-close fa-xl'></i></button>
+            </div>
+            <iframe class="stop" style="width: 100%;height: 500px;" src="https://www.youtube.com/embed/mkomfZHG5q4"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen>
+            </iframe>
+        </div>
+    </section>
+    <!-- End -->
+    
     <!-- sidebar -->
     <aside>
         <!-- User -->
@@ -181,20 +195,6 @@
         </div>
         <div class="container-custom mt-5">
             <div class="row m-lg-0 mt-3">
-                <!-- bubble Trailer -->
-                <section id="bubbleTrailer">
-                    <div class="sectionTrailer">
-                        <div class="stop fixed-top m-3">
-                            <button class="close-trailer stop btn btn-light"><i class='fa-regular fa-arrow-left fa-xl'></i></button>
-                        </div>
-                        <iframe class="stop" style="width: 100%;height: 500px;" src="https://www.youtube.com/embed/mkomfZHG5q4"
-                            title="YouTube video player" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen>
-                        </iframe>
-                    </div>
-                </section>
-                <!-- card -->
                 <div class="col-lg-4 col-md-12 col-sm-5 m-auto">
                     <div class="card">
                         <img src="./asstes//img/8.jpg" alt="">
