--- a/Seaction.html
+++ b/Seaction.html
@@ -21,20 +21,6 @@
 </head>
 <body>
     
-    <!-- bubble Trailer -->
-    <section id="bubbleTrailer">
-        <div class="sectionTrailer">
-            <div class="stop fixed-top m-3">
-                <button class="close-trailer stop btn btn-light"><i class='fa-regular fa-arrow-left fa-xl'></i></button>
-            </div>
-            <iframe class="stop" style="width: 100%;height: 500px;" src="https://www.youtube.com/embed/mkomfZHG5q4"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen>
-            </iframe>
-        </div>
-    </section>
-    <!-- card -->
 
     <!-- Loading -->
     <div id="js-preloader" class="load">
@@ -47,6 +33,21 @@
     </div>
     <!-- End -->
 
+    <!-- bubble Trailer -->
+    <section id="bubbleTrailer">
+        <div class="sectionTrailer">
+            <div class="stop mb-3">
+                <button class="close-trailer stop "><i class='fa-regular fa-close fa-xl'></i></button>
+            </div>
+            <iframe class="stop" style="width: 100%;height: 500px;" src="https://www.youtube.com/embed/mkomfZHG5q4"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen>
+            </iframe>
+        </div>
+    </section>
+    <!-- End -->
+    
     <!-- sidebar -->
     <aside>
         <!-- User -->
