--- a/show-Room.html
+++ b/show-Room.html
@@ -37,8 +37,8 @@
     <!-- bubble Trailer -->
     <section id="bubbleTrailer">
         <div class="sectionTrailer">
-            <div class="stop fixed-top m-3">
-                <button class="close-trailer stop btn btn-light"><i class='fa-regular fa-arrow-left fa-xl'></i></button>
+            <div class="stop mb-3">
+                <button class="close-trailer stop "><i class='fa-regular fa-close fa-xl'></i></button>
             </div>
             <iframe class="stop" style="width: 100%;height: 500px;" src="https://www.youtube.com/embed/mkomfZHG5q4"
                 title="YouTube video player" frameborder="0"
@@ -47,7 +47,7 @@
             </iframe>
         </div>
     </section>
-    <!-- card -->
+    <!-- End -->
 
     <!-- sidebar -->
     <aside>
