--- a/index.html
+++ b/index.html
@@ -2141,14 +2141,14 @@
     </main>
 	<!-- end -->
         
-    <!-- Trends -->
+    <!-- Anime -->
     <main class="carouselCards my-5">
         
         <div class="container-custom">
             <!-- Title Section -->
             <div class="w-100 pb-2 mb-2 titleSections">
                 <h3 style="letter-spacing: 10px;">
-                    Anime <i class="fa-sharp fa-regular fa-arrow-trend-up fa-lg"></i>
+                    Anime <i class="fa-solid fa-film fa-lg"></i>
                 </h3>
             </div>
             <div id="similar2" class="section__carousel owl-carousel row">
@@ -2602,6 +2602,12 @@
 
     <!-- pricing -->
     <section class="pricing">
+        <!-- Title Section -->
+        <div class="w-100 pb-2 mb-2 text-center">
+            <h3 style="letter-spacing: 10px;">
+                payment plan <i class="fa-solid fa-coins fa-lg"></i>
+            </h3>
+        </div>
         <!-- Card 20$ -->
         <a href="#" class="card-wrapper">
             <!-- card Header -->
