--- a/login.html
+++ b/login.html
@@ -99,7 +99,7 @@
               <li>Without Ads</li>
             </ul>
             </div>
-            <a class="link-back" href="#">
+            <a class="link-back" href="index.html">
             <span style="text-align: left;">
               Back to website
               <i class="fa-solid fa-arrow-right"></i>
