--- a/about.html
+++ b/about.html
@@ -3,157 +3,116 @@
 <head>
   <meta charset="UTF-8">
   <title>3D Carousel</title>
-  <style>
-    .carousel-container {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  perspective: 1000px;
-}
-
-.carousel {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-}
-
-.carousel img,
-.carousel video {
-  position: absolute;
-  width: 200px;
-  height: 400px;
-  object-fit: cover;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
-}
-
-.carousel video {
-  object-fit: fill;
-}
-
-.ground {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  border: 1px solid #ccc;
-  border-radius: 50%;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
-}
-  </style>
 </head>
 <body>
-  <div class="carousel-container">
-    <div id="spin-on" class="carousel">
-      <img src="images/img1.jpg" alt="">
-      <img src="images/img2.jpg" alt="">
-      <img src="images/img3.jpg" alt="">
-      <img src="images/img4.jpg" alt="">
-      <img src="images/img5.jpg" alt="">
-      <img src="images/img6.jpg" alt="">
-      <img src="images/img7.jpg" alt="">
-      <img src="images/img8.jpg" alt="">
-      <img src="images/img9.jpg" alt="">
-      <video src="videos/video1.mp4"></video>
-      <video src="videos/video2.mp4"></video>
-      <video src="videos/video3.mp4"></video>
+  <div class="overllay"></div>
+  <div class="container">
+    <div class="forms-container">
+      <div class="signin-signup">
+        <form action="#" class="sign-in-form">
+          <h2 class="title">Sign in</h2>
+          <div class="input-field">
+            <i class="fas fa-user"></i>
+            <input type="text" placeholder="Username" />
+          </div>
+          <div class="input-field">
+            <i class="fas fa-lock"></i>
+            <input type="password" placeholder="Password" />
+          </div>
+          <div class="text-login">
+            <input type="checkbox" />
+            <span>Remember me</span>
+            <span>Forget Password ?</span>
+          </div>
+          <input type="submit" value="Login" class="btn solid" />
+          <button class="btn solid" id="sign-up-btn">Sign up</button>
+          <p class="social-text">Or Sign in with social platforms</p>
+          <div class="social-media">
+            <a href="#" class="social-icon">
+              <i class="fab fa-facebook-f"></i>
+            </a>
+            <a href="#" class="social-icon">
+              <i class="fab fa-twitter"></i>
+            </a>
+            <a href="#" class="social-icon">
+              <i class="fab fa-google"></i>
+            </a>
+            <a href="#" class="social-icon">
+              <i class="fab fa-linkedin-in"></i>
+            </a>
+          </div>
+        </form>
+        <form action="#" class="sign-up-form">
+          <h2 class="title">Sign up</h2>
+          <div class="input-field">
+            <i class="fas fa-user"></i>
+            <input type="text" placeholder="Username" />
+          </div>
+          <div class="input-field">
+            <i class="fas fa-envelope"></i>
+            <input type="email" placeholder="Email" />
+          </div>
+          <div class="input-field">
+            <i class="fas fa-lock"></i>
+            <input type="password" placeholder="Password" />
+          </div>
+          <input type="submit" class="btn" value="Sign up" />
+          <button class="btn" id="sign-in-btn">Sign in</button>
+          <p class="social-text">Or Sign up with social platforms</p>
+          <div class="social-media">
+            <a href="#" class="social-icon">
+              <i class="fab fa-facebook-f"></i>
+            </a>
+            <a href="#" class="social-icon">
+              <i class="fab fa-twitter"></i>
+            </a>
+            <a href="#" class="social-icon">
+              <i class="fab fa-google"></i>
+            </a>
+            <a href="#" class="social-icon">
+              <i class="fab fa-linkedin-in"></i>
+            </a>
+          </div>
+        </form>
+      </div>
     </div>
-    <div class="ground" id="ground"></div>
+
+
+    <div class="panels-container">
+      <div class="panel left-panel">
+        <div class="content">
+          <div style="text-align: left;">
+            <h5>Welcome To</h5>
+            <a class="logo" href="#">Blur.<span>TV</span></a>
+          </div>
+          <div style="text-align: left;">
+            <h2>About Lorm</h2>
+          <h3 style="margin-top: 20px;">Features</h3>
+          <ul>
+            <li>Download Movirs</li>
+            <li>novation New</li>
+            <li>Without Ads</li>
+          </ul>
+          </div>
+          <a class="link-back" href="index.html">
+          <span style="text-align: left;">
+            Back to website
+            <i class="fa-solid fa-arrow-right"></i>
+          </span></a>
+        </div>
+      </div>
+      <div class="panel right-panel">
+        <div class="content">
+          <h3>One of us ?</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
+            laboriosam ad deleniti.
+          </p>
+        </div>
+      </div>
+    </div>
   </div>
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script>
-    $(function() {
-  // Set constant variable values
-  const radius = 850;
-  const autoRotate = true;
-  const rotateSpeed = 100;
-  const imgWidth = 200; 
-  const imgHeight = 400;
 
-  // Get necessary elements from DOM
-  const ospin = $('#spin-on')[0];
-  const aEle = $('img, video', ospin);
-
-  // Set dimensions for elements
-  ospin.style.width = imgWidth + 'px';
-  ospin.style.height = imgHeight + 'px';
-  $('#ground').css({
-    width: radius * 3 + 'px',
-    height: radius * 3 + 'px'
-  });
-
-  // Function to initialize elements in a circular pattern
-  function init(delayTime) {
-    aEle.each((i, ele) => {
-      ele.style.transform = `rotateY(${i * (360 / aEle.length)}deg) translateZ(${radius}px)`;
-      ele.style.transition = 'transform 1s';
-      ele.style.transitionDelay = `${delayTime || (aEle.length - i) / 4}s`;
-    });
-  }
-
-  // Function to apply transform to selected element
-  function applyTransform(obj) {
-    let ty = Math.min(Math.max(-180, tY), 0);
-    obj.style.transform = `rotateX(${ty}deg) rotateY(${tX}deg)`;
-  }
-
-  // Function to play/pause rotation of elements
-  function playSpin(yes) {
-    ospin.style.animationPlayState = yes ? 'running' : 'paused';
-  }
-
-  // Update transform values on mouse movement
-  let sX, sY, nX, nY, desX = 0, desY = 0, tX = 0, tY = 10;
-  $(document).on({
-    mousedown: e => {
-      clearInterval(spinTimer);
-      sX = e.clientX;
-      sY = e.clientY;
-    },
-    mousemove: e => {
-      if (sX && sY) {
-        nX = e.clientX;
-        nY = e.clientY;
-        const dx = (nX - sX) * 0.1;
-        const dy = (nY - sY) * 0.1;
-        tX += dx;
-        tY += dy;
-        applyTransform(ospin);
-        sX = nX;
-        sY = nY;
-      }
-    },
-    mouseup: () => {
-      spinTimer = setInterval(() => {
-        tX += 0.1;
-        applyTransform(ospin);
-      }, 16);
-      sX = sY = 0;
-    }
-  });
-
-  // Update transform periodically
-  let spinTimer = setInterval(() => {
-    tX += 0.1;
-    applyTransform(ospin);
-  }, 16);
-
-  // Play/pause rotation on mouse enter/leave
-  $(document).on({
-    mouseenter: () => playSpin(false),
-    mouseleave: () => playSpin(true)
-  });
-
-  // Call init function after a short delay from page load
-  setTimeout(init, 100);
-
-});
-  </script>
+  <script src="asstes/js/index-login.js"></script>
 </body>
 </html>
