--- a/index.html
+++ b/index.html
@@ -195,20 +195,20 @@
 	<header id="header" class="header">
 		<div id="drag-on">
 			<div onmouseover="stop(this)" onmouseout="play(this)" id="spin-on">
-				<img class="hvr-head-img view" src="asstes/img/8.jpg">
-				<img class="hvr-head-img view" src="asstes/img/1.jpg">
-				<img class="hvr-head-img view" src="asstes/img/2.jpg">
-				<img class="hvr-head-img view" src="asstes/img/3.png">
-				<img class="hvr-head-img view" src="asstes/img/4.webp">
-				<img class="hvr-head-img view" src="asstes/img/5.jpg">
-				<img class="hvr-head-img view" src="asstes/img/6.jpg">
-				<img class="hvr-head-img view" src="asstes/img/7.jpg">
-				<img class="hvr-head-img view" src="asstes/img/8.jpg">
-				<img class="hvr-head-img view" src="asstes/img/9.jpg">
-				<img class="hvr-head-img view" src="asstes/img/10.jpg">
-				<img class="hvr-head-img view" src="asstes/img/11.jpg">
-				<img class="hvr-head-img view" src="asstes/img/12.jpg">
-				<img class="hvr-head-img view" src="asstes/img/13.jpg">
+				<!-- <img class="hvr-head-img view" src="asstes/img/8.jpg"> -->
+				<!-- <img class="hvr-head-img view" src="asstes/img/1.jpg"> -->
+				<!-- <img class="hvr-head-img view" src="asstes/img/2.jpg"> -->
+				<!-- <img class="hvr-head-img view" src="asstes/img/3.png"> -->
+				<!-- <img class="hvr-head-img view" src="asstes/img/4.webp"> -->
+				<!-- <img class="hvr-head-img view" src="asstes/img/5.jpg"> -->
+				<!-- <img class="hvr-head-img view" src="asstes/img/6.jpg"> -->
+				<!-- <img class="hvr-head-img view" src="asstes/img/7.jpg"> -->
+				<!-- <img class="hvr-head-img view" src="asstes/img/8.jpg"> -->
+				<!-- <img class="hvr-head-img view" src="asstes/img/9.jpg"> -->
+				<!-- <img class="hvr-head-img view" src="asstes/img/10.jpg"> -->
+				<!-- <img class="hvr-head-img view" src="asstes/img/11.jpg"> -->
+				<!-- <img class="hvr-head-img view" src="asstes/img/12.jpg"> -->
+				<!-- <img class="hvr-head-img view" src="asstes/img/13.jpg"> -->
 				<img class="hvr-head-img view" src="asstes/img/14.jpg">
 				<img class="hvr-head-img view" src="asstes/img/15.jpg">
 				<img class="hvr-head-img view" src="asstes/img/16.jpg">
