--- a/index.html
+++ b/index.html
@@ -195,27 +195,46 @@
 	<header id="header" class="header">
 		<div id="drag-on">
 			<div onmouseover="stop(this)" onmouseout="play(this)" id="spin-on">
-				<!-- <img class="hvr-head-img view" src="asstes/img/8.jpg"> -->
-				<!-- <img class="hvr-head-img view" src="asstes/img/1.jpg"> -->
-				<!-- <img class="hvr-head-img view" src="asstes/img/2.jpg"> -->
-				<!-- <img class="hvr-head-img view" src="asstes/img/3.png"> -->
-				<!-- <img class="hvr-head-img view" src="asstes/img/4.webp"> -->
-				<!-- <img class="hvr-head-img view" src="asstes/img/5.jpg"> -->
-				<!-- <img class="hvr-head-img view" src="asstes/img/6.jpg"> -->
-				<!-- <img class="hvr-head-img view" src="asstes/img/7.jpg"> -->
-				<!-- <img class="hvr-head-img view" src="asstes/img/8.jpg"> -->
-				<!-- <img class="hvr-head-img view" src="asstes/img/9.jpg"> -->
-				<!-- <img class="hvr-head-img view" src="asstes/img/10.jpg"> -->
-				<!-- <img class="hvr-head-img view" src="asstes/img/11.jpg"> -->
-				<!-- <img class="hvr-head-img view" src="asstes/img/12.jpg"> -->
-				<!-- <img class="hvr-head-img view" src="asstes/img/13.jpg"> -->
+				<!-- <img class="hvr-head-img view" src="asstes/img/8.jpg">
+				<img class="hvr-head-img view" src="asstes/img/1.jpg">
+				<img class="hvr-head-img view" src="asstes/img/2.jpg">
+				<img class="hvr-head-img view" src="asstes/img/3.png">
+				<img class="hvr-head-img view" src="asstes/img/4.webp">
+				<img class="hvr-head-img view" src="asstes/img/5.jpg">
+				<img class="hvr-head-img view" src="asstes/img/6.jpg">
+				<img class="hvr-head-img view" src="asstes/img/7.jpg">
+				<img class="hvr-head-img view" src="asstes/img/8.jpg">
+				<img class="hvr-head-img view" src="asstes/img/9.jpg">
+				<img class="hvr-head-img view" src="asstes/img/10.jpg">
+				<img class="hvr-head-img view" src="asstes/img/11.jpg">
+				<img class="hvr-head-img view" src="asstes/img/12.jpg">
+				<img class="hvr-head-img view" src="asstes/img/13.jpg">
 				<img class="hvr-head-img view" src="asstes/img/14.jpg">
 				<img class="hvr-head-img view" src="asstes/img/15.jpg">
 				<img class="hvr-head-img view" src="asstes/img/16.jpg">
 				<img class="hvr-head-img view" src="asstes/img/17.jpg">
 				<img class="hvr-head-img view" src="asstes/img/3.png">
 				<img class="hvr-head-img view" src="asstes/img/5.jpg">
-				<img class="hvr-head-img view" src="asstes/img/2.jpg">
+				<img class="hvr-head-img view" src="asstes/img/2.jpg"> -->
+				<img class="hvr-head-img view" src="https://creativereview.imgix.net/content/uploads/2018/12/Unknown-5.jpeg?auto=compress,format&q=60&w=2024&h=3000">
+				<img class="hvr-head-img view" src="https://creativereview.imgix.net/content/uploads/2018/12/Unknown-5.jpeg?auto=compress,format&q=60&w=2024&h=3000">
+				<img class="hvr-head-img view" src="https://creativereview.imgix.net/content/uploads/2018/12/Unknown-5.jpeg?auto=compress,format&q=60&w=2024&h=3000">
+				<img class="hvr-head-img view" src="https://creativereview.imgix.net/content/uploads/2018/12/Unknown-5.jpeg?auto=compress,format&q=60&w=2024&h=3000">
+				<img class="hvr-head-img view" src="https://creativereview.imgix.net/content/uploads/2018/12/Unknown-5.jpeg?auto=compress,format&q=60&w=2024&h=3000">
+				<img class="hvr-head-img view" src="https://creativereview.imgix.net/content/uploads/2018/12/Unknown-5.jpeg?auto=compress,format&q=60&w=2024&h=3000">
+				<img class="hvr-head-img view" src="https://creativereview.imgix.net/content/uploads/2018/12/Unknown-5.jpeg?auto=compress,format&q=60&w=2024&h=3000">
+				<img class="hvr-head-img view" src="https://creativereview.imgix.net/content/uploads/2018/12/Unknown-5.jpeg?auto=compress,format&q=60&w=2024&h=3000">
+				<img class="hvr-head-img view" src="https://creativereview.imgix.net/content/uploads/2018/12/Unknown-5.jpeg?auto=compress,format&q=60&w=2024&h=3000">
+				<img class="hvr-head-img view" src="https://creativereview.imgix.net/content/uploads/2018/12/Unknown-5.jpeg?auto=compress,format&q=60&w=2024&h=3000">
+				<img class="hvr-head-img view" src="https://creativereview.imgix.net/content/uploads/2018/12/Unknown-5.jpeg?auto=compress,format&q=60&w=2024&h=3000">
+				<img class="hvr-head-img view" src="https://creativereview.imgix.net/content/uploads/2018/12/Unknown-5.jpeg?auto=compress,format&q=60&w=2024&h=3000">
+				<img class="hvr-head-img view" src="https://creativereview.imgix.net/content/uploads/2018/12/Unknown-5.jpeg?auto=compress,format&q=60&w=2024&h=3000">
+				<img class="hvr-head-img view" src="https://creativereview.imgix.net/content/uploads/2018/12/Unknown-5.jpeg?auto=compress,format&q=60&w=2024&h=3000">
+				<img class="hvr-head-img view" src="https://creativereview.imgix.net/content/uploads/2018/12/Unknown-5.jpeg?auto=compress,format&q=60&w=2024&h=3000">
+				<img class="hvr-head-img view" src="https://creativereview.imgix.net/content/uploads/2018/12/Unknown-5.jpeg?auto=compress,format&q=60&w=2024&h=3000">
+				<img class="hvr-head-img view" src="https://creativereview.imgix.net/content/uploads/2018/12/Unknown-5.jpeg?auto=compress,format&q=60&w=2024&h=3000">
+				<img class="hvr-head-img view" src="https://creativereview.imgix.net/content/uploads/2018/12/Unknown-5.jpeg?auto=compress,format&q=60&w=2024&h=3000">
+				<img class="hvr-head-img view" src="https://creativereview.imgix.net/content/uploads/2018/12/Unknown-5.jpeg?auto=compress,format&q=60&w=2024&h=3000">
 				<p id="demo" class="logo">
 					<!-- logo -->
                     <a href="./index.html" class="logo">Blur.<span>TV</span></a>
