--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 	<header id="header" class="header">
 		<div id="drag-on">
 			<div onmouseover="stop(this)" onmouseout="play(this)" id="spin-on">
-				<!-- <img class="hvr-head-img view" src="asstes/img/8.jpg">
+				<img class="hvr-head-img view" src="asstes/img/8.jpg">
 				<img class="hvr-head-img view" src="asstes/img/1.jpg">
 				<img class="hvr-head-img view" src="asstes/img/2.jpg">
 				<img class="hvr-head-img view" src="asstes/img/3.png">
@@ -215,26 +215,7 @@
 				<img class="hvr-head-img view" src="asstes/img/17.jpg">
 				<img class="hvr-head-img view" src="asstes/img/3.png">
 				<img class="hvr-head-img view" src="asstes/img/5.jpg">
-				<img class="hvr-head-img view" src="asstes/img/2.jpg"> -->
-				<img class="hvr-head-img view" src="https://creativereview.imgix.net/content/uploads/2018/12/Unknown-5.jpeg?auto=compress,format&q=60&w=2024&h=3000">
-				<img class="hvr-head-img view" src="https://creativereview.imgix.net/content/uploads/2018/12/Unknown-5.jpeg?auto=compress,format&q=60&w=2024&h=3000">
-				<img class="hvr-head-img view" src="https://creativereview.imgix.net/content/uploads/2018/12/Unknown-5.jpeg?auto=compress,format&q=60&w=2024&h=3000">
-				<img class="hvr-head-img view" src="https://creativereview.imgix.net/content/uploads/2018/12/Unknown-5.jpeg?auto=compress,format&q=60&w=2024&h=3000">
-				<img class="hvr-head-img view" src="https://creativereview.imgix.net/content/uploads/2018/12/Unknown-5.jpeg?auto=compress,format&q=60&w=2024&h=3000">
-				<img class="hvr-head-img view" src="https://creativereview.imgix.net/content/uploads/2018/12/Unknown-5.jpeg?auto=compress,format&q=60&w=2024&h=3000">
-				<img class="hvr-head-img view" src="https://creativereview.imgix.net/content/uploads/2018/12/Unknown-5.jpeg?auto=compress,format&q=60&w=2024&h=3000">
-				<img class="hvr-head-img view" src="https://creativereview.imgix.net/content/uploads/2018/12/Unknown-5.jpeg?auto=compress,format&q=60&w=2024&h=3000">
-				<img class="hvr-head-img view" src="https://creativereview.imgix.net/content/uploads/2018/12/Unknown-5.jpeg?auto=compress,format&q=60&w=2024&h=3000">
-				<img class="hvr-head-img view" src="https://creativereview.imgix.net/content/uploads/2018/12/Unknown-5.jpeg?auto=compress,format&q=60&w=2024&h=3000">
-				<img class="hvr-head-img view" src="https://creativereview.imgix.net/content/uploads/2018/12/Unknown-5.jpeg?auto=compress,format&q=60&w=2024&h=3000">
-				<img class="hvr-head-img view" src="https://creativereview.imgix.net/content/uploads/2018/12/Unknown-5.jpeg?auto=compress,format&q=60&w=2024&h=3000">
-				<img class="hvr-head-img view" src="https://creativereview.imgix.net/content/uploads/2018/12/Unknown-5.jpeg?auto=compress,format&q=60&w=2024&h=3000">
-				<img class="hvr-head-img view" src="https://creativereview.imgix.net/content/uploads/2018/12/Unknown-5.jpeg?auto=compress,format&q=60&w=2024&h=3000">
-				<img class="hvr-head-img view" src="https://creativereview.imgix.net/content/uploads/2018/12/Unknown-5.jpeg?auto=compress,format&q=60&w=2024&h=3000">
-				<img class="hvr-head-img view" src="https://creativereview.imgix.net/content/uploads/2018/12/Unknown-5.jpeg?auto=compress,format&q=60&w=2024&h=3000">
-				<img class="hvr-head-img view" src="https://creativereview.imgix.net/content/uploads/2018/12/Unknown-5.jpeg?auto=compress,format&q=60&w=2024&h=3000">
-				<img class="hvr-head-img view" src="https://creativereview.imgix.net/content/uploads/2018/12/Unknown-5.jpeg?auto=compress,format&q=60&w=2024&h=3000">
-				<img class="hvr-head-img view" src="https://creativereview.imgix.net/content/uploads/2018/12/Unknown-5.jpeg?auto=compress,format&q=60&w=2024&h=3000">
+				<img class="hvr-head-img view" src="asstes/img/2.jpg">
 				<p id="demo" class="logo">
 					<!-- logo -->
                     <a href="./index.html" class="logo">Blur.<span>TV</span></a>
