--- a/Item-Details.html
+++ b/Item-Details.html
@@ -251,13 +251,13 @@
                         <span id="" class=" col mt-2 p-0 m-auto">
                             <a class="watch" href="./show-Room.html">
                                 <i class="fa-light fa-play fa-xl pr-2"></i>
-                                Watch Now
+                                Watch
                             </a>
                         </span>
                         <span class=" col mt-2 p-0 m-auto">
                             <a class="down" href="/asstes/img/انترو تيتو موفيز أفلام 2022 أكشن • رعب • اثارة • خيال • سوبرهيروز ᴴᴰ.mp4">
                                 <i class="fa-light fa-download fa-xl pr-2"></i>
-                                Download Now
+                                Download
                             </a>
                         </span>
                     </div>
