--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                             <a href="contacts.html">Contacts</a>
                             <a href="privacy-policy.html">Privacy policy</a>
                             <a href="about.html">About-Us</a>
-                            <a href="">Pricing plans</a>
+                            <a href="payment.html">Pricing plans</a>
                         </div>
                     </li>
                 </ul>
@@ -2707,7 +2707,6 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="asstes/js/jquery.slim.min.js"></script>
     <script src="asstes/js/jquery-3.5.1.min.js"></script>
-    <!-- <script src="asstes/js/jquery.nicescroll.js"></script> -->
     <!-- Bootstrap -->
     <script src="asstes/js/popper.js"></script>
     <script src="asstes/js/bootstrap5.js"></script>
