--- a/profile.html
+++ b/profile.html
@@ -153,7 +153,7 @@
                             <a href="contacts.html">Contacts</a>
                             <a href="privacy-policy.html">Privacy policy</a>
                             <a href="about.html">About-Us</a>
-                            <a href="">Pricing plans</a>
+                            <a href="payment.html">Pricing plans</a>
                         </div>
                     </li>
                 </ul>
@@ -189,7 +189,7 @@
 					<img id="form__img"  src="asstes/img/user.svg" alt="">
 				</div>
 				<div class="profile__meta">
-					<h3>John Doe</h3>
+					<h3>John Cena</h3>
 					<span>Blur.TV ID: 78123</span>
 				</div>
 			</div>
@@ -274,7 +274,7 @@
 						<div class="col-12 col-xl-6">
 							<div class="dashbox">
 								<div class="dashbox__title">
-									<h3><i class="icon ion-ios-film"></i> Movies for you</h3>
+									<h3><i class="icon ion-ios-film"></i>My Favorites List</h3>
 
 									<div class="dashbox__wrap">
 										<a class="dashbox__refresh" href="#"><i class="icon ion-ios-refresh"></i></a>
@@ -381,7 +381,7 @@
 													<div class="main__table-text"><a href="#">I Dream in Another Language</a></div>
 												</td>
 												<td>
-													<div class="main__table-text">John Doe</div>
+													<div class="main__table-text">John cena</div>
 												</td>
 												<td>
 													<div class="main__table-text main__table-text--rate"><i class="icon ion-ios-star"></i> 7.2</div>
@@ -392,7 +392,7 @@
 													<div class="main__table-text"><a href="#">Benched</a></div>
 												</td>
 												<td>
-													<div class="main__table-text">John Doe</div>
+													<div class="main__table-text">John Cena</div>
 												</td>
 												<td>
 													<div class="main__table-text main__table-text--rate"><i class="icon ion-ios-star"></i> 6.3</div>
@@ -403,7 +403,7 @@
 													<div class="main__table-text"><a href="#">Whitney</a></div>
 												</td>
 												<td>
-													<div class="main__table-text">John Doe</div>
+													<div class="main__table-text">John Cena</div>
 												</td>
 												<td>
 													<div class="main__table-text main__table-text--rate"><i class="icon ion-ios-star"></i> 8.4</div>
@@ -414,7 +414,7 @@
 													<div class="main__table-text"><a href="#">Blindspotting</a></div>
 												</td>
 												<td>
-													<div class="main__table-text">John Doe</div>
+													<div class="main__table-text">John Cena</div>
 												</td>
 												<td>
 													<div class="main__table-text main__table-text--rate"><i class="icon ion-ios-star"></i> 9.0</div>
@@ -425,7 +425,7 @@
 													<div class="main__table-text"><a href="#">I Dream in Another Language</a></div>
 												</td>
 												<td>
-													<div class="main__table-text">John Doe</div>
+													<div class="main__table-text">John Cena</div>
 												</td>
 												<td>
 													<div class="main__table-text main__table-text--rate"><i class="icon ion-ios-star"></i> 7.7</div>
@@ -599,11 +599,15 @@
 		</div>
 	</div>
 	<!-- end content -->
+	
+	<!-- Start Logout -->
 	<div class="container-custom">
 		<div class="col-12 p-0 my-3">
 			<button class="form__btn" type="button">Logout</button>
 		</div>
 	</div>
+	<!-- Start Logout -->
+	
 	<!-- footer -->
 	<footer class="footer">
 		<div class="container-custom">
