--- a/show-Room.html
+++ b/show-Room.html
@@ -165,7 +165,7 @@
                             <a href="contacts.html">Contacts</a>
                             <a href="privacy-policy.html">Privacy policy</a>
                             <a href="about.html">About-Us</a>
-                            <a href="">Pricing plans</a>
+                            <a href="payment.html">Pricing plans</a>
                         </div>
                     </li>
                 </ul>
