--- a/index.html
+++ b/index.html
@@ -2610,7 +2610,7 @@
             </h3>
         </div>
         <!-- Card 20$ -->
-        <a href="#" class="card-wrapper">
+        <a href="payment.html" class="card-wrapper">
             <!-- card Header -->
             <div class="card-header">
                 <h2>Free</h2>
@@ -2631,7 +2631,7 @@
             <button class="card-button">i want it</button>
         </a>
         <!-- Card 40$ -->
-        <a href="#" class="card-wrapper">
+        <a href="payment.html" class="card-wrapper">
             <!-- card Header -->
             <div class="card-header">
                 <h2>Startup</h2>
@@ -2652,7 +2652,7 @@
             <button class="card-button">i want it</button>
         </a>
         <!-- Card 60$ -->
-        <a href="#" class="card-wrapper">
+        <a href="payment.html" class="card-wrapper">
             <!-- card Header -->
             <div class="card-header">
                 <h2>Growth</h2>
