template movies blur.tv last-v

--- a/show-Room.html
+++ b/show-Room.html
@@ -133,10 +133,10 @@
             <!-- tools nsv -->
             <div class="d-md-none d-lg-inline-block toolsNav">
                 <ul class="item-nav d-none d-md-flex">
-                    <li><a class="activeNavBar hvr" href="index.html">Home</a></li>
+                    <li><a class="hvr" href="index.html">Home</a></li>
                     <li><a class="hvr" href="index-html">News</a></li>
                     <li class="position-relative">
-                        <a class="hvr" href="#">Movies</a> <i class="fa-light fa-chevron-down fa-xs"></i>
+                        <a class=" hvr" href="#">Movies</a> <i class="fa-light fa-chevron-down fa-xs"></i>
                         <div class="dropdownList">
                             <a href="Seaction.html">English movies</a>
                             <a href="Seaction.html">Arabic Movies</a>
@@ -158,16 +158,13 @@
                         </div>
                     </li>
                     <li class="position-relative">
-                        <a class="hvr" href="#">More</a> <i class="fa-light fa-chevron-down fa-xs"></i>
+                        <a class="activeNavBar hvr" href="#">More</a> <i class="fa-light fa-chevron-down fa-xs"></i>
                         <div class="dropdownList">
                             <a href="admin/dashboard.html">Admin</a>
                             <a href="profile.html">Profile</a>
-                            <a href="show-Room.html">Show Room</a>
-                            <a href="Item-Details.html">Item Detalis</a>
-                            <a href="Seaction.html">Section</a>
                             <a href="contacts.html">Contacts</a>
-                            <a href="about.html">About-Us</a>
                             <a href="privacy-policy.html">Privacy policy</a>
+                            <a href="about.html">About-Us</a>
                             <a href="payment.html">Pricing plans</a>
                         </div>
                     </li>
@@ -185,7 +182,7 @@
                 </button>
                 <!-- toogle Login Logout -->
                 <a class="icon d-none" href="login.html">Sign in</a>
-                <ul class="item-nav d-inline-flex">
+                <ul class="item-nav d-lg-inline-flex d-none">
                     <li class="position-relative d-flex align-items-center">
                         <i class="fa-light fa-chevron-down fa-xs pr-2"></i>
                         <a class="icon nav-user d-inline-flex" href="login.html">
@@ -193,7 +190,6 @@
                         </a>
                         <div class="dropdownList">
                             <a href="profile.html">Profile</a>
-                            <a href="profile.html">notifications</a>
                             <a href="login.html">Log in</a>
                         </div>
                     </li>
