--- a/about.html
+++ b/about.html
@@ -118,7 +118,7 @@
                     <li><a class="hvr" href="index.html">Home</a></li>
                     <li><a class="hvr" href="index-html">News</a></li>
                     <li class="position-relative">
-                        <a class="activeNavBar hvr" href="#">Movies</a> <i class="fa-light fa-chevron-down fa-xs"></i>
+                        <a class="hvr" href="#">Movies</a> <i class="fa-light fa-chevron-down fa-xs"></i>
                         <div class="dropdownList">
                             <a href="Seaction.html">English movies</a>
                             <a href="Seaction.html">Arabic Movies</a>
@@ -140,7 +140,7 @@
                         </div>
                     </li>
                     <li class="position-relative">
-                        <a class="hvr" href="#">More</a> <i class="fa-light fa-chevron-down fa-xs"></i>
+                        <a class="activeNavBar hvr" href="#">More</a> <i class="fa-light fa-chevron-down fa-xs"></i>
                         <div class="dropdownList">
                             <a href="admin/dashboard.html">Admin</a>
                             <a href="profile.html">Profile</a>
@@ -164,7 +164,7 @@
                 </button>
                 <!-- toogle Login Logout -->
                 <a class="icon d-none" href="login.html">Sign in</a>
-                <ul class="item-nav d-inline-flex">
+                <ul class="item-nav d-lg-inline-flex d-none">
                     <li class="position-relative d-flex align-items-center">
                         <i class="fa-light fa-chevron-down fa-xs pr-2"></i>
                         <a class="icon nav-user d-inline-flex" href="login.html">
