--- a/contacts.html
+++ b/contacts.html
@@ -115,10 +115,10 @@
             <!-- tools nsv -->
             <div class="d-md-none d-lg-inline-block toolsNav">
                 <ul class="item-nav d-none d-md-flex">
-                    <li><a class="hvr" href="index.html">Home</a></li>
-                    <li><a class="hvr" href="index-html">News</a></li>
+                    <li><a class="activeNavBar hvr" href="index.html">Home</a></li>
+                    <li><a class="hvr" href="index.html">News</a></li>
                     <li class="position-relative">
-                        <a class="hvr" href="#">Movies</a> <i class="fa-light fa-chevron-down fa-xs"></i>
+                        <a class=" hvr" href="#">Movies</a> <i class="fa-light fa-chevron-down fa-xs"></i>
                         <div class="dropdownList">
                             <a href="Seaction.html">English movies</a>
                             <a href="Seaction.html">Arabic Movies</a>
@@ -140,7 +140,7 @@
                         </div>
                     </li>
                     <li class="position-relative">
-                        <a class="activeNavBar hvr" href="#">More</a> <i class="fa-light fa-chevron-down fa-xs"></i>
+                        <a class="hvr" href="#">More</a> <i class="fa-light fa-chevron-down fa-xs"></i>
                         <div class="dropdownList">
                             <a href="admin/dashboard.html">Admin</a>
                             <a href="profile.html">Profile</a>
