--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <div class="d-md-none d-lg-inline-block toolsNav">
                 <ul class="item-nav d-none d-md-flex">
                     <li><a class="activeNavBar hvr" href="index.html">Home</a></li>
-                    <li><a class="hvr" href="index-html">News</a></li>
+                    <li><a class="hvr" href="index.html">News</a></li>
                     <li class="position-relative">
                         <a class=" hvr" href="#">Movies</a> <i class="fa-light fa-chevron-down fa-xs"></i>
                         <div class="dropdownList">
