--- a/payment.html
+++ b/payment.html
@@ -118,8 +118,8 @@
         <!-- tools nsv -->
         <div class="d-md-none d-lg-inline-block toolsNav">
             <ul class="item-nav d-none d-md-flex">
-                <li><a class="hvr" href="index.html">Home</a></li>
-                <li><a class="hvr" href="index-html">News</a></li>
+                <li><a class="activeNavBar hvr" href="index.html">Home</a></li>
+                <li><a class="hvr" href="index.html">News</a></li>
                 <li class="position-relative">
                     <a class=" hvr" href="#">Movies</a> <i class="fa-light fa-chevron-down fa-xs"></i>
                     <div class="dropdownList">
@@ -143,7 +143,7 @@
                     </div>
                 </li>
                 <li class="position-relative">
-                    <a class="activeNavBar hvr" href="#">More</a> <i class="fa-light fa-chevron-down fa-xs"></i>
+                    <a class="hvr" href="#">More</a> <i class="fa-light fa-chevron-down fa-xs"></i>
                     <div class="dropdownList">
                         <a href="admin/dashboard.html">Admin</a>
                         <a href="profile.html">Profile</a>
@@ -184,8 +184,8 @@
             </button>
         </div>
     </div>
-  </nav>
-  <!-- End  -->
+</nav>
+<!-- End  -->
 
   <!-- Start Header Img -->
   <header class="poseterHeader">
